# cardpack

./: CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  DESIGN.md  DIARY.md  README.md
.github/workflows/: CI.yaml
examples/: bitter.rs  bridge.rs  canasta.rs  cli.rs  no-limit.rs
src/: card_error.rs  lib.rs  old_prelude.rs  prelude.rs  refactored.rs
src/card/: mod.rs
src/card/ranks/: euchre_rank.rs  generic.rs  mod.rs  standard52_rank.rs
src/cards/: mod.rs
src/cards/card/: mod.rs
src/cards/card/ranks/: euchre_rank.rs  generic.rs  mod.rs  standard52_rank.rs
src/decks/: canasta.rs  euchre24.rs  french.rs  hand_and_foot.rs  macros.rs  manila.rs  mod.rs  modern.rs  pinochle.rs  short.rs  skat.rs  spades.rs  standard52.rs  tarot.rs
src/decks/euchre24/: mod.rs
src/decks/modern/: mod.rs
src/decks/standard52/: mod.rs
src/fluent/: fluent_name.rs  mod.rs  named.rs
src/fluent/locales/en-US/: french-deck.ftl
src/localization/: mod.rs
src/localization/locales/: core.ftl
src/localization/locales/de/: french-deck.ftl  pinochle.ftl  skat.ftl
src/old/decks/: canasta.rs  euchre24.rs  french.rs  hand_and_foot.rs  mod.rs  modern.rs  pinochle.rs  short.rs  skat.rs  spades.rs  tarot.rs
src/old/types/: card.rs  mod.rs  pile.rs  rank.rs  suit.rs  traits.rs
src/refact/: decks.rs  mod.rs  pips.rs  traits.rs
src/traits/: mod.rs
src/types/: card.rs  card_error.rs  mod.rs  pile.rs  pips.rs  rank.rs  suit.rs  traits.rs
src/types/card/: mod.rs
src/types/pile/: mod.rs
src/types/rank/: mod.rs
src/types/suit/: mod.rs
src/types/utils/: mod.rs
(+4 files in other folders)
