[package]
name = "cardpack"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

[dependencies]
colored = "2.1"
fluent-templates = "0.11"
hashbag = { version = "0.1", features = ["serde"] }
log = "0.4"
rand = "0.8"
thiserror = "2.0"

[dev-dependencies]
ckc-rs = "0.1.15"
clap = { version = "4.5", features = ["derive", "unicode"] }
env_logger = "0.11"
rstest = "0.23"
term-table = "1.4.0"
